# plato

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
AI/: README.md  pyproject.toml
AI/CV/: app.py  main.py  utilities.py
AI/LLM/: groq_llm.py
VLM/: .env  app.py  docuPanda.py  docupanda.ipynb  llama_parse.py  pyproject.toml
be/: api_handler.py  main.py  pyproject.toml  server.sh  session_analysis.py  session_summary.json  tab_usage.json  tracker.py  video_analysis.py
be/extension/: background.js  content.js  manifest.json  popup.html  popup.js
befe/: tailwind.config.ts
befe/app/: globals.css  page.tsx
fe/: package-lock.json  package.json  pnpm-lock.yaml
fe/app/: env.d.ts  globals.css  layout.tsx  page.tsx
fe/app/(auth)/: layout.tsx
fe/app/(auth)/login/: page.tsx
fe/app/(auth)/register/: page.tsx
fe/app/analysis/: page.tsx
fe/app/input/: page.tsx
fe/app/login/: route.ts
fe/app/models/: Cookie.ts  CookieDocument.ts  Session.ts  SessionDocument.ts  User.ts  UserDocument.ts
fe/app/repo/: CookieRepository.ts  Database.ts  SessionRepository.ts  UserRepository.ts
fe/app/services/: CookieService.ts  CookieServiceImpl.ts  ServiceFactory.ts  SessionService.ts  SessionServiceImpl.ts  UserService.ts  UserServiceImpl.ts
fe/app/session/: page.tsx
fe/app/summary/: page.tsx
fe/app/webcam/: page.tsx
fe/components/: Footer.tsx  Header.tsx  LeftPanelNavigation.tsx  LoginButton.tsx  MenuBar.tsx  StartSessionButton.tsx  ThemeButton.tsx  WebcamCapture.tsx
fe/interfaces/: NavigationContent.tsx
fe/utils/: index.ts
(+5 files in other folders)
