[tool.poetry]
name = "aimodule"
version = "0.1.0"
description = "This folder contains the AI Module developed by Plato for DLW"
authors = ["hkt456 <tamhuynhkhac@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
groq = "^0.18.0"
ultralytics = "^8.3.81"
opencv-python = "^4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
