[tool.poetry]
name = "vlm"
version = "0.1.0"
description = ""
authors = ["hkt456 <tamhuynhkhac@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-cloud = "^0.1.12"
llama-index = "^0.12.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
